--- a/src/components/NonUserMain/NonUserMain.css
+++ b/src/components/NonUserMain/NonUserMain.css
@@ -1,5 +1,6 @@
 /* 비로그인 상단 */
-.non-user-main-top {
+.main-top {
+  padding-top: 66px;
   min-height: 100vh;
   background-color: #8fbaff;
   color: #fff;
@@ -8,12 +9,12 @@
   align-items: center;
 }
 
-.non-user-main-top #left img {
+.main-top #left img {
   max-width: 550px;
   max-height: 412px;
 }
 
-.non-user-main-top #right {
+.main-top #right {
   text-align: center;
   font-size: 70px;
   font-weight: 800;
@@ -21,28 +22,104 @@
 }
 
 /* 비로그인 중단 */
-.non-user-main-middle {
+.main-middle {
+  padding-top: 66px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #f7f5f1;
+}
+
+.main-middle #top {
+  flex-grow: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 
-.non-user-main-middle .bottom {
-  flex-grow: 2;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.non-user-main-middle .top {
-  flex-grow: 1;
-}
-
 #middle-page-title {
+  height: 100%;
   font-size: 65px;
   text-align: center;
 }
 
+.main-middle #bottom {
+  flex-grow: 3;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.feature {
+  text-align: center;
+  min-width: 25vw;
+  max-height: 35vh;
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 25px 25px;
+}
+
+.feature-img-title {
+  text-align: center;
+  margin-bottom: 3vh;
+}
+
 .feature-img {
-  max-width: 5vw;
+  max-width: 6vw;
+  margin-bottom: 1vh;
+}
+
+.feature-title {
+  font-size: 1.4rem;
+}
+
+/* 비로그인 하단 */
+.main-bottom {
+  padding-top: 66px;
+  min-height: 100vh;
+  background-color: #8fbaff;
+  display: flex;
+  flex-direction: column;
+}
+.main-bottom #upper {
+  flex-grow: 9;
+  min-height: 100%;
+  color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.main-bottom #left {
+  text-align: center;
+  font-size: 50px;
+  font-weight: 800;
+  line-height: 115%;
+}
+
+.main-bottom #right {
+}
+
+.main-bottom #right Button {
+  display: block;
+  border-radius: 10px;
+  padding: 20px 30px;
+  font-size: 30px;
+  font-weight: 800;
+  margin: auto;
+}
+
+.main-bottom #footer {
+  flex-grow: 1;
+  height: 100%;
+  background-color: #f7f5f1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#footer span {
+  opacity: 0.4;
 }
