ADD: 폴더 color highlight 기능 구현

--- a/src/common/Sidebar/Sidebar.css
+++ b/src/common/Sidebar/Sidebar.css
@@ -25,5 +25,24 @@
 
 .clicked {
   height: 1.7rem;
-  background-color: rgba(77, 175, 255, 0.25);
+}
+
+.highlight-red {
+  background-color: #ffcbcb;
+}
+
+.highlight-blue {
+  background-color: #dae4ff;
+}
+
+.highlight-green {
+  background-color: #d2eccc;
+}
+
+.highlight-yellow {
+  background-color: #ffe69c;
+}
+
+.highlight-none {
+  background-color: none;
 }
