--- a/src/styles/FileUpload.css
+++ b/src/styles/FileUpload.css
@@ -12,9 +12,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #e6e6e6;
   border-radius: 1rem;
   border: 1px dashed #000000;
+  cursor: pointer;
 }
 
 .upload-comment {
@@ -23,4 +23,17 @@
   font-weight: 500;
   text-align: center;
   margin-left: 1rem;
+}
+
+.input-none {
+  display: none;
+}
+
+.stop-dragging {
+  background-color: #e6e6e6;
+}
+
+.file-dragging {
+  background-color: #525252;
+  color: #ffffff;
 }
